--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <meta name="theme-color" content="#0066CC">
     <title>ShoreSquad - Beach Cleanup Made Social</title>
     <link rel="stylesheet" href="css/styles.css">
-    <!-- Leaflet CSS for maps -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.css">
 </head>
 <body>
     <!-- Navigation -->
@@ -47,7 +45,24 @@
         <section id="map" class="section map-section" role="region" aria-label="Beach locations map">
             <h2>Find Your Beach</h2>
             <div class="map-container">
-                <div id="map" class="map" style="height: 500px;"></div>
+                <div class="google-map-wrapper" style="position: relative; width: 100%; height: 500px; margin-bottom: 20px;">
+                    <iframe 
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3988.7919854329066!2d103.95538772346947!3d1.381497099999984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2ssg!4v1733089200000&markers=color:red%7Clabel:Next Cleanup%7C1.381497,103.955574" 
+                        width="100%" 
+                        height="500" 
+                        style="border:0; border-radius: 8px;" 
+                        allowfullscreen="" 
+                        loading="lazy" 
+                        referrerpolicy="no-referrer-when-downgrade"
+                        aria-label="Google Map showing next cleanup location at Pasir Ris">
+                    </iframe>
+                </div>
+                <div class="cleanup-info" style="background-color: #f0f8ff; border-left: 4px solid #0066CC; padding: 15px; margin-bottom: 20px; border-radius: 4px;">
+                    <h3 style="margin-top: 0; color: #0066CC;">Next Cleanup Spot</h3>
+                    <p><strong>Location:</strong> Pasir Ris</p>
+                    <p><strong>Coordinates:</strong> 1.381497°N, 103.955574°E</p>
+                    <p><strong>Name:</strong> Street View Asia</p>
+                </div>
             </div>
             <div class="map-controls">
                 <input type="text" id="searchInput" placeholder="Search for beaches..." aria-label="Search for beaches">
@@ -58,27 +73,11 @@
         <!-- Weather Section -->
         <section id="weather" class="section weather-section" role="region" aria-label="Weather information">
             <h2>Check the Conditions</h2>
+            <div class="weather-info-container">
+                <p class="weather-updated" id="weatherUpdated">Loading weather data...</p>
+            </div>
             <div class="weather-grid" id="weatherGrid">
-                <div class="weather-card" role="article">
-                    <div class="weather-icon">🌞</div>
-                    <h3>Temperature</h3>
-                    <p class="weather-value" id="tempValue">--°C</p>
-                </div>
-                <div class="weather-card" role="article">
-                    <div class="weather-icon">💨</div>
-                    <h3>Wind Speed</h3>
-                    <p class="weather-value" id="windValue">-- km/h</p>
-                </div>
-                <div class="weather-card" role="article">
-                    <div class="weather-icon">💧</div>
-                    <h3>Humidity</h3>
-                    <p class="weather-value" id="humidityValue">--%</p>
-                </div>
-                <div class="weather-card" role="article">
-                    <div class="weather-icon">🌊</div>
-                    <h3>UV Index</h3>
-                    <p class="weather-value" id="uvValue">--</p>
-                </div>
+                <!-- 4-day forecast will be populated here -->
             </div>
         </section>
 
@@ -146,7 +145,6 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
